--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
+    "mongodb": "^6.18.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
